fix(DESIGNSYS-2353): fix Properties z-index

--- a/src/components/_storybook/Stories/Stories.module.scss
+++ b/src/components/_storybook/Stories/Stories.module.scss
@@ -48,7 +48,7 @@
 .properties {
   position: fixed;
   bottom: 20px;
-  z-index: 9999;
+  z-index: 99999;
   left: 50%;
   transform: translateX(-50%);
   box-shadow: (0, 0, 0, 0.1) 0px 1px 3px 0px;
